<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/onBoardingImage"
        android:layout_width="370dp"
        android:layout_height="450dp"
        android:layout_marginHorizontal="@dimen/common_padding_middle"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:contentDescription="@string/on_boarding_description_item_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/blackLine"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="@dimen/common_padding_big"
        android:layout_marginTop="@dimen/common_padding_min"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onBoardingImage" />

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blackLine"
        tools:text="Welcome!" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_default"
        android:lineSpacingExtra="@dimen/common_padding_min"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        tools:text="This application has been developed by a single person, if you want to collaborate with your feedback, it will be totally welcome." />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_padding_default"
            android:contentDescription="@string/on_boarding_arrow_back"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tvSwipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_boarding_text_swipe"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/arrowForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            android:contentDescription="@string/on_boarding_arrow_forward"
            android:src="@drawable/ic_arrow_forward" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:text="@string/on_boarding_continue_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/lyCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/lyCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>
