<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyHeaders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_doll" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyMessages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyHeaders">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:text="@string/menu_text_message"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:letterSpacing="0.05"
            android:text="@string/menu_text_message_productive"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_big"
            android:letterSpacing="0.05"
            android:text="@string/menu_text_message_reminders"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:elevation="50dp"
        app:cardBackgroundColor="#1f222e"
        app:cardCornerRadius="8dp"
        app:contentPadding="@dimen/common_padding_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/lyMessages"
        app:layout_constraintStart_toStartOf="@id/lyMessages"
        app:layout_constraintTop_toBottomOf="@id/lyMessages">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.08"
                android:text="@string/menu_text_message_today_phrase"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvTodayPhrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_big"
                android:ellipsize="end"
                android:letterSpacing="0.08"
                android:maxLines="5"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:text="“Start by doing what is necessary, then do possible and suddenly you will be doing the impossible”" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_big"
                android:letterSpacing="0.08"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:text="- San Francisco de Asis" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:letterSpacing="0.08"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/white"
                tools:text="1885 - 1928" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
