<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginVertical="@dimen/common_padding_min"
    android:elevation="50dp"
    app:cardBackgroundColor="#DFDFE5FF"
    app:cardCornerRadius="10dp"
    app:contentPadding="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvReminderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_item_text_reminder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReminder"
            tools:text="                   Comprar los medicamentos cerca del lugar que me dijeron que queda en el la calle Capultepech en Incauca, cerca de la fábrica de bienes y al lado de la constructora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:maxLength="200"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toStartOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common_padding_min"
            android:background="@color/black"
            app:layout_constraintEnd_toStartOf="@id/lnButtons"
            app:layout_constraintStart_toEndOf="@id/tvReminder" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnButtons"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/editButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/reminder_item_edit_button_description"
                android:src="@drawable/ic_edit" />

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/reminder_item_edit_button_description"
                android:src="@drawable/ic_delete" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReminder">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvHourTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_item_text_hour"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvHour"
                        tools:text="7:00 P.M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_min"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAlarmTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_item_text_alarm"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAlarm"
                        tools:text="Active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_item_text_date"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDate"
                        tools:text="29/06/2023"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_min"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvImportanceTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_item_text_importance"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvImportance"
                        tools:text="High"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="3dp"
                        android:background="@android:color/holo_red_dark" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
